# maat

./: .env.example  .gitignore  AGENTS.md  BRIEF.md  DECISIONS.md  Makefile  PLAN.md  README.md  TIMELINE.md  docker-compose.yml
python/: .dockerignore  Dockerfile  pyproject.toml
python/maat/: __init__.py  bus.py  clocks.py  config.py  db.py  eval_prompt.py  evals.py  events.py  geo.py  ids.py  obs.py  obs_metrics.py  prompts.py
python/maat/acquire/: __init__.py  apify.py  ccnews.py  clean.py  drivers.py  fetch.py  gdelt.py  history.py  ingest.py  locales.py  newsdata.py  rss.py  source_gate.py  steer.py  wikidata.py
python/maat/agents/: __init__.py  __main__.py  classify_agent.py  contradiction_agent.py  corroborate_agent.py  curation.py  extract_agent.py  geotag_agent.py  grounding_agent.py  ownership_agent.py  story_graph_agent.py  translate_titles.py  triage.py
python/maat/fixtures/: expectations.json
python/maat/web/: app.py  (+1 more)
python/scripts/: acquire.py  acquire_locales.py  acquire_newsdata.py  acquire_rss.py  backfill.py  backfill_ccnews.py  backfill_source.py  calibrate.py  calibrate_prod.py  clock.py  corroborate_run.py  eval.py  eval_prompt.py  extract_run.py  harvest.py  ingest.py  ingest_corpus.py  pipeline_run.py  smoke_providers.py  source_registry_agent.py
python/tests/: conftest.py  test_accuracy.py  test_acquire.py  test_acquire_ingest.py  test_acquire_steer.py  test_acquisition.py  test_admin_auth.py  test_auth.py  test_backfill.py  test_buildcache.py  test_bus.py  test_bus_jetstream.py  test_calibration_prod.py  test_ccnews.py  test_clean.py  test_config.py  test_console_api.py  test_console_api_integration.py  test_consumer_health.py  test_contradiction.py  test_curation.py  test_db.py  test_de_us_metrics.py  test_embed_cache.py  test_eval_prompt.py  test_evals.py  test_extract_idempotent.py  test_favicon.py  test_feed.py  test_feed_filter.py  test_feed_projection_reads.py  test_feedback_intake.py  test_feedback_triage.py  test_gdelt.py  test_geo.py  test_geotag.py  test_grounding.py  test_harvest.py  test_identity.py  test_ids.py  (+46 more)
(+246 files in other folders)
