[project]
name = "maat"
version = "0.0.0"
description = "Maat — veracity-weighted news feed (Python agent layer)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "nats-py>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maat"]

[tool.ruff]
line-length = 100
