[project]
name = "maat"
version = "0.0.0"
description = "Maat — veracity-weighted news feed (Python agent layer)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "nats-py>=2.6",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "asyncpg>=0.30",
    "python-multipart>=0.0.9",
    "trafilatura>=1.8",
    "numpy>=2.4.6",
    "warcio>=1.8.1",
    "py3langid>=0.3.0",
    "onnxruntime>=1.27.0",
    "tokenizers>=0.23.1",
    "huggingface-hub>=1.19.0",
    "feedparser>=6.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]
# Observability → cat-cafe (#32). Optional: the pipeline no-ops without an OTLP endpoint.
obs = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maat"]

[tool.ruff]
line-length = 100
