[package]
name = "maat-kerneld"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
maat-kernel = { path = "../maat-kernel" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "migrate"] }
async-nats = "0.38"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
